# tomb

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  ChangeLog  ChangeLog.md  HACKING  INSTALL.md  KNOWN_BUGS  KNOWN_BUGS.md  Makefile  Makefile.am  NEWS  README  README.md  TODO  TODO.org  configure.ac  deb  make_deb  tomb
.github/: FUNDING.yml
.github/workflows/: ci.yml  hugo.yml  linux.yml  portable.yml  sync_pot.yaml
debian/: README.Debian  changelog  control  copyright  install  postinst  rules  tomb-gtk.install  tomb.install
doc/: FIDO2.md  HACKING.txt  KEY_SPECIFICATIONS.txt  LinuxHDEncSettings.txt  Makefile.am  TODO.org  Tomb_User_Manual.org  tomb-open.1  tomb-status.1  tomb.1
doc/literate/: Makefile  docco.css  shocco
doc/web/: README  dyne-config.el  dyne-web-config.el
doc/web/views/: index.muse  manual.html  manual.man
docs/: .gitignore  README.md  config.toml
docs/content/: _index.md  credits.md  faq.md  thank-you.md
docs/data/: links.yml  navigation.yml  social.yml
docs/themes/dyne-soft/archetypes/: posts.md
docs/themes/dyne-soft/assets/assets/js/: set.js
docs/themes/dyne-soft/assets/assets/sass/: _cookies.scss  _elements.scss  _forms.scss  _layout.scss  _navigation.scss  _set.scss  colors.scss
docs/themes/dyne-soft/data/: colors.yml  navigation.yml
docs/themes/dyne-soft/layouts/: robots.txt
docs/themes/dyne-soft/layouts/_default/: 404.html  _list.html  about.html  baseof.html  download.html  index.html  list.html  single.html
docs/themes/dyne-soft/layouts/blog/: list.html
docs/themes/dyne-soft/layouts/services/: list.html
docs/themes/dyne-soft/layouts/taxonomy/: tag.html
extras/: PYTHON.md  install_cloakify.sh  install_sphinx.sh  tomb-status.c  undertaker
extras/android/: README.txt  tomb
extras/cloak/: Makefile  README.md  cloakify.py  decloakify.py
extras/cloak/ciphers/: ipAddressesTop100  starTrek
extras/debian/: control  menu  tomb.sharedmimeinfo
extras/desktop/: README  gtkrc-2.0  install.zsh  tomb-ascii-art.txt  tomb.applications  tomb.desktop  tomb.mime
extras/dismissed/: INSTALL.python  tomb-open  undertaker
extras/dismissed/debian/: control  rules  watch
extras/dismissed/pytomb/tomblib/: parser.py
extras/dismissed/qt/tombqt/: ui_open_keymethod.py
extras/docker/: Dockerfile  LICENSE  README.md  tomb.sh
extras/gtk-tray/: Makefile  README.md  tomb-gtk-tray.c
extras/gtomb/: LICENSE  README.md  gtomb
extras/kdf/: Makefile  Makefile.am
extras/kdf-keys/: Makefile  README  hexencode.c  pbkdf2.c  test.sh
extras/kdf/pbkdf2/: pbkdf2.c
extras/po/: Makefile  de.help  de.po  es.help  es.po  fr.help  fr.po  generate_translatable_strings.pl  generate_translatable_strings.sh  it.po  ru.help  ru.po  sv.po  tomb.pot
extras/portable/: README.md  gh-ci-portable.yml  tomb
extras/portable/test/: bats_setup
extras/pytomb/: .gitignore
extras/qt/: setup.py
extras/qt-tray/: README.txt  main.cpp  qt-tray.pro  tomb.cpp  tomb.h
extras/qt-tray/i18n/: tomb-qt-tray_it.qm  tomb-qt-tray_it.ts
extras/qt/tombqt/: open_tombfile.ui  ui_open_success.py  worker.py
extras/test/: .gitignore  00_create.sh  10_operations.sh  20_recipients.sh  30_kdf-pbkdf2.sh  30_kdf.sh  31_kdf-argon2.sh  40_regression.sh  50_integrity.sh  60_resize.sh  65_passwd.sh  70_qrencode.sh  75_hooks.sh  80_steganography.sh  90_setkey.sh  Dockerfile  Makefile  aggregate-results  close_block.c  dig_forge_lock_open_close.sh  doas.conf  kdf.test.sh  runtests  setup  sharness  simple.test.sh  sphinx.cfg  testall.sh  utils.sh
extras/test/gnupg/: gpg.conf  pubring.gpg  secring.gpg  trustdb.gpg
extras/test/gnupg/private-keys-v1.d/: 072F571EEF62D50039BD0ADE5D7BBCD2BCE6D82E.key  116B5302CA58AD75CDFFCD421870E66CDB13FE8A.key  20A0287823F73C780E326F45E44CA9132F0EE154.key  C3783BFBB0C0935A0EA020CC8A2991C0B294FB76.key  EB03B55FA102233176E47F9D5C1BC2AE424B686F.key  EB2C102DDE4A5253F1BA77EED834D27359CF735B.key
extras/tomber/: README.md  test.py  tomber.py
extras/tomber/tomber/: __init__.py  test.py  tomber.py
extras/tomber/tools/: parser.py
extras/translations/: Makefile  README.md  co.po  de.po  es.po  fi.po  fr.po  generate_translatable_strings.pl  generate_translatable_strings.sh  it.po  pt_BR-2.10.po  pt_BR.po  ru.po  sv.po  sync_pot_po.sh  tomb-2.10.pot  tomb.pot  zh_Hans.po
po/: tomb.pot
portable/: GNUmakefile  README.md  strtosize.c  tomb
portable/test/: bats_setup  check-random-data.bats  create-fillrandom.bats  create_open_close.bats
portable/test/test_helper/bats-assert/: load.bash
portable/test/test_helper/bats-assert/src/: assert_line.bash  assert_not_equal.bash  refute_regex.bash
portable/test/test_helper/bats-file/: load.bash
portable/test/test_helper/bats-file/src/: temp.bash
share/: Makefile.am  dyne-tomb.xml  tomb  tomb.applications  tomb.desktop  tomb.keys  tomb.mime  tomb.mimepkg
share/images/: tomb_and_bats.xpm
src/: HACKING.txt  Makefile.am  tomb  tomb-askpass.c  tomb-gtk.cpp  tomb-notify.cpp  tomb-open  tomb-status.c  tomb-status.cpp  undertaker
src/gui/qt/: Makefile  create.py  create.ui  ui_create.py  wizardpage_pass.py  worker.py
src/gui/tomblib/: parser.py  tomb.py  wrapper.py
src/kdf/: .gitignore  Makefile.am  README  test.txt
src/kdf/pbkdf2/: benchmark.c  gen_salt.c
src/pytomb/: .wrapper.py.swp  setup.py
src/pytomb/tomblib/: test_parser.py  tomb.py  undertaker.py
src/qt/: .gitignore  Makefile  create.py  notes.txt  setup.py
src/qt/tombqt/: create.py  create.ui  open.py  open.ui  open_choosekey.ui  open_keymethod.ui  open_success.ui  ui_open_tombfile.py  worker.py
src/test/: kdf_null.test.sh  passwd.test.sh  simple.test.sh  testall.sh
website/content/: _index.md  about.md  community.md  cookies.md  faq.md
website/data/: navigation.yml
website/themes/dyne-soft/archetypes/: services.md  workshops.md
website/themes/dyne-soft/data/: links.yml
website/themes/dyne-soft/layouts/_default/: about.html  community.html
website/themes/dyne-soft/layouts/blog/: single.html
website/themes/dyne-soft/layouts/taxonomy/: list.html
(+27 files in other folders)
