
bin_SCRIPTS = tomb tomb-open

bin_PROGRAMS = tomb-status tomb-notify

tomb_status_SOURCES = tomb-status.cpp
tomb_status_LDADD = @GTK2_LIBS@ @NOTIFY_LIBS@
tomb_status_CXXFLAGS = @GTK2_CFLAGS@ @NOTIFY_CFLAGS@

tomb_notify_SOURCES = tomb-notify.cpp
tomb_notify_LDADD = @NOTIFY_LIBS@
tomb_notify_CXXFLAGS = @NOTIFY_CFLAGS@
